Java lesson 11: testing, with BlockHound
JUnit, AssertJ and Mockito for xUnit, FluentAssertions and Moq users,
Mockito's Java agent, BlockHound on JDK 25, and null checking with
JSpecify and NullAway. Lesson 9 points to BlockHound; en, fr and es.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Pbqsufo6LWJaBinkZGcUKg